fixed temp header spacing

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -1,3 +1,3 @@
 .page-content {
-    padding-top: 100px;
+    padding-top: 34px;
 }
