--- a/src/style/components/_nav.scss
+++ b/src/style/components/_nav.scss
@@ -3,6 +3,7 @@ nav {
     left: 0;
     width: 100%;
     position: fixed;
+    background-color: $white;
     border-bottom: 1px solid $border-dark;
 
     &:after {
